IMPROVEMENT: changement de la taille de la police du texte général

--- a/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_typography.scss
+++ b/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_typography.scss
@@ -5,7 +5,7 @@ a {
 
 html{
   line-height: 1.5;
-
+/*
   @media only screen and (min-width: 0) {
     font-size: 14px;
   }
@@ -17,7 +17,18 @@ html{
   @media only screen and (min-width: $large-screen) {
     font-size: 15px;
   }
+*/
+    @media only screen and (min-width: 0) {
+    font-size: 1.2rem;
+  }
 
+  @media only screen and (min-width: $medium-screen) {
+    font-size: 1.2rem;
+  }
+
+  @media only screen and (min-width: $large-screen) {
+    font-size: 1.2rem;
+  }
   font-family: $font-stack;
   font-weight: normal;
   color: $off-black;
