--- a/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_variables.scss
+++ b/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_variables.scss
@@ -306,13 +306,20 @@ $toast-action-color: #eeff41;
 $font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
+/*
 $h1-fontsize: 4.2rem !default;
 $h2-fontsize: 3.56rem !default;
 $h3-fontsize: 2.92rem !default;
 $h4-fontsize: 2.28rem !default;
 $h5-fontsize: 1.64rem !default;
 $h6-fontsize: 1.15rem !default;
-
+*/
+$h1-fontsize: 3.56rem !default;
+$h2-fontsize: 2.92rem !default;
+$h3-fontsize: 2.28rem !default;
+$h4-fontsize: 1.64rem !default;
+$h5-fontsize: 1.15rem !default;
+$h6-fontsize: 1.00rem !default;
 
 // 21. Footer
 // ==========================================================================
