--- a/themes/delphinepythonique/static/css/main.css
+++ b/themes/delphinepythonique/static/css/main.css
@@ -2135,6 +2135,14 @@
   color: transparent !important;
 }
 
+/*
+$h1-fontsize: 4.2rem !default;
+$h2-fontsize: 3.56rem !default;
+$h3-fontsize: 2.92rem !default;
+$h4-fontsize: 2.28rem !default;
+$h5-fontsize: 1.64rem !default;
+$h6-fontsize: 1.15rem !default;
+*/
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -4257,23 +4265,36 @@ a {
 
 html {
   line-height: 1.5;
+  /*
+    @media only screen and (min-width: 0) {
+      font-size: 14px;
+    }
+
+    @media only screen and (min-width: $medium-screen) {
+      font-size: 14.5px;
+    }
+
+    @media only screen and (min-width: $large-screen) {
+      font-size: 15px;
+    }
+  */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
 }
 @media only screen and (min-width: 0) {
   html {
-    font-size: 14px;
+    font-size: 1.2rem;
   }
 }
 @media only screen and (min-width: 992px) {
   html {
-    font-size: 14.5px;
+    font-size: 1.2rem;
   }
 }
 @media only screen and (min-width: 1200px) {
   html {
-    font-size: 15px;
+    font-size: 1.2rem;
   }
 }
 
@@ -4287,39 +4308,39 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
-  font-size: 4.2rem;
-  line-height: 110%;
-  margin: 2.8rem 0 1.68rem 0;
-}
-
-h2 {
   font-size: 3.56rem;
   line-height: 110%;
   margin: 2.3733333333rem 0 1.424rem 0;
 }
 
-h3 {
+h2 {
   font-size: 2.92rem;
   line-height: 110%;
   margin: 1.9466666667rem 0 1.168rem 0;
 }
 
-h4 {
+h3 {
   font-size: 2.28rem;
   line-height: 110%;
   margin: 1.52rem 0 0.912rem 0;
 }
 
-h5 {
+h4 {
   font-size: 1.64rem;
   line-height: 110%;
   margin: 1.0933333333rem 0 0.656rem 0;
 }
 
-h6 {
+h5 {
   font-size: 1.15rem;
   line-height: 110%;
   margin: 0.7666666667rem 0 0.46rem 0;
+}
+
+h6 {
+  font-size: 1rem;
+  line-height: 110%;
+  margin: 0.6666666667rem 0 0.4rem 0;
 }
 
 em {
