--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -19,7 +19,7 @@
         {% endblock head %}
 </head>
 
-<body id="index" class="home">
+<body id="index" class="materialize-red lighten-5 ">
 <div class="container">
         {% include 'github.html' %}
         <header>
@@ -48,7 +48,7 @@
         </header><!-- /#banner -->
         <div class="row">
              <div class="col m3 teal lighten-2" >
-                     <section id="extras" class="body">
+                     <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
                                   <div class="card blue-grey darken-1">
@@ -56,16 +56,23 @@
                                       <span class="card-title">{{AUTHOR}}</span>
                                         {{AUTHOR_FUNCTION}}
                                     </div>
-                                    <div class="card-action  ">
-                                         <div id="extras" class="social"  >
-                                                 {% for name, link in SOCIAL %}
+                                    <div class=" card-action  ">
+                                         <div  class="social"  >
+                                             {% for name, link in SOCIAL %}
 
                                                 <a  href="{{ link }}">{{ name }}</a>
 
-                                         {% endfor %}
-  </div>
+                                             {% endfor %}
+                                        </div>
                                     </div>
                                   </div>
+                                    <ul class="collection with-header">
+                                    <li class="collection-header"><h4>Categories de projets</h4></li>
+                                    <li class="collection-item"><a href="{{ SITEURL }}/category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+
+                                  </ul>
+
+
                                 </div>
                               </div>
 
@@ -74,14 +81,12 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-5">
+             <div  class="col s12 m9 materialize-red lighten-4">
                 {% block content %}
                 {% endblock %}
              </div>
 
         </div>
-
-
 
 
         <footer id="contentinfo" class="page-footer">
