--- a/themes/delphinepythonique/templates/index.html
+++ b/themes/delphinepythonique/templates/index.html
@@ -3,65 +3,34 @@
 {% block content %}
 {% if articles %}
     {% for article in articles_page.object_list %}
+             <section id="content" class="body">
+                    <ul id="posts-list" class="hfeed" start="{{ articles_paginator.per_page -1 }}">
+                        <li>
+                            <article class="z-depth-3 white">
+                                <header>
+                                    <h2><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
+                                           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
+                                </header>
 
-        {# First item #}
-        {% if loop.first and not articles_page.has_previous() %}
+                                <div >
+                                {% include 'article_infos.html' %}
+                                {{ article.summary }}
+                                    <div class="right-align">
+                                <a class="waves-effect waves-light btn "
+                                   href="{{ SITEURL }}/{{ article.url }}">
+                                    <i class="material-icons right">keyboard_arrow_down</i>Aller plus loin...</a> </div>
 
-            <aside id="featured" class="body">
-                <article>
-                    <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-                    {% include 'article_infos.html' %}{{ article.content }}{% include 'comments.html' %}
-                </article>
-            </aside><!-- /#featured -->
-
-            {% if loop.length > 1 %}
-                <section id="content" class="body">
-                    <h1>Articles sous forme de blog</h1>
-                    <hr />
-                    <ol id="posts-list" class="hfeed">
-            {% endif %}
-        {# other items #}
-        {% else %}
-            {% if loop.first %}
-                <section id="content" class="body">
-                    <ol id="posts-list" class="hfeed" start="{{ articles_paginator.per_page -1 }}">
-            {% endif %}
-            <li><article class="hentry">
-                <header>
-                    <h2><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-                           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
-                </header>
-
-                <div class="entry-content">
-                {% include 'article_infos.html' %}
-                {{ article.summary }}
-                <a class="readmore" href="{{ SITEURL }}/{{ article.url }}">read more</a>
-                {% include 'comments.html' %}
-                </div><!-- /.entry-content -->
-            </article></li>
-        {% endif %}
-        {% if loop.last %}
-            {% if loop.length > 1 or articles_page.has_other_pages() %}
-                </ol><!-- /#posts-list -->
+                                {% include 'comments.html' %}
+                                </div><!-- /.entry-content -->
+                            </article>
+                        </li>
+               </ul><!-- /#posts-list -->
                 {% if articles_page.has_other_pages() %}
                     {% include 'pagination.html' %}
                 {% endif %}
                 </section><!-- /#content -->
-            {% endif %}
-        {% endif %}
-    {% endfor %}
+      {% endfor %}
 {% else %}
-<section id="content" class="body">
-    {% if pages %}
-    <h2>Pages</h2>
-    <ul>
-    {% for page in pages %}
-        <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
-    {% endfor %}
-    </ul>
-    {% else %}
     <p>This site currently has no content.</p>
-    {% endif %}
-</section>
 {% endif %}
 {% endblock content %}
