--- a/themes/delphinepythonique/sources/_style.scss
+++ b/themes/delphinepythonique/sources/_style.scss
@@ -57,6 +57,21 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
   margin: 0 auto;
   max-width: 1280px;
   width: 100%;
-}
+}/*
+$h1-fontsize: 2.92rem !default;
+$h2-fontsize: 2.28rem !default;
+$h3-fontsize: 1.64rem !default;
+$h4-fontsize: 1.15rem !default;
+$h5-fontsize: 1.00rem !default;
+$h6-fontsize: 0.80rem !default;
+*/
+h1 { font-size: 2.28rem; line-height: 110%; margin: ($h1-fontsize / 1.5) 0 ($h1-fontsize / 2.5) 0;}
+h2 { font-size: 1.64rem; line-height: 110%; margin: ($h2-fontsize / 1.5) 0 ($h2-fontsize / 2.5) 0;}
+h3 { font-size: 1.15rem; line-height: 110%; margin: ($h3-fontsize / 1.5) 0 ($h3-fontsize / 2.5) 0;}
+h4 { font-size: 1.00rem; line-height: 110%; margin: ($h4-fontsize / 1.5) 0 ($h4-fontsize / 2.5) 0;}
+h5 { font-size: 0.80rem; line-height: 110%; margin: ($h5-fontsize / 1.5) 0 ($h5-fontsize / 2.5) 0;}
+h6 { font-size: 0.75rem; line-height: 110%; margin: ($h6-fontsize / 1.5) 0 ($h6-fontsize / 2.5) 0;}
+
   }
+
 
