--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -54,8 +54,13 @@
                                   <div class="card blue-grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">{{AUTHOR}}</span>
-                                        {{AUTHOR_FUNCTION}}
+                                      <span>{{AUTHOR_FUNCTION}}</span>
+
+
                                     </div>
+                                       <div class=" card-action  ">
+                                           <span><a href="{{CV_URL}}">Curriculum Vitae</a></span>
+                                       </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
                                              {% for name, link in SOCIAL %}
@@ -67,10 +72,10 @@
                                     </div>
                                   </div>
                                     <ul class="collection with-header">
-                                    <li class="collection-header"><h4>Categories de projets</h4></li>
-                                    <li class="collection-item"><a href="{{ SITEURL }}/category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
+                                        <li class="collection-header"><h4>Categories de projets</h4></li>
+                                        <li class="collection-item"><a href="{{ SITEURL }}/category/certification-developpeur-python.html">Certification développeur python 2002-2023</a></li>
 
-                                  </ul>
+                                    </ul>
 
 
                                 </div>
