FEATURE: add detail CV

--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -60,6 +60,7 @@
                                     </div>
                                        <div class=" card-action  ">
                                            <span><a href="{{CV_URL}}">Curriculum Vitae</a></span>
+                                           <span><a href="{{CV_DETAIL_URL}}">Curriculum Vitae détaillé</a></span>
                                        </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
