--- a/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_variables.scss
+++ b/themes/delphinepythonique/sources/materialize-src-v1.0.0/materialize-src/sass/components/_variables.scss
@@ -34,14 +34,14 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("materialize-red", "lighten-2") !default;
+$primary-color: color("grey", "darken-2") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: color("teal", "lighten-1") !default;
-$success-color: color("green", "base") !default;
-$error-color: color("red", "base") !default;
-$link-color: color("black", "darken-1") !default;
+$secondary-color: color("grey", "darken-3") !default;
+$success-color: color("grey", "base") !default;
+$error-color: color("grey", "lighten-1") !default;
+$link-color: color("grey", "darken-4") !default;
 
 
 // 2. Badges
@@ -101,7 +101,7 @@ $button-floating-radius: 50% !default;
 
 $card-padding: 24px !default;
 $card-bg-color: #fff !default;
-$card-link-color: color("orange", "accent-2") !default;
+$card-link-color: $link-color !default;
 $card-link-color-light: lighten($card-link-color, 20%) !default;
 
 
