--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -19,7 +19,7 @@
         {% endblock head %}
 </head>
 
-<body id="index" class="materialize-red lighten-5 ">
+<body id="index" class="grey lighten-5 ">
 <div class="container">
         {% include 'github.html' %}
         <header>
@@ -47,11 +47,11 @@
                 </ul> </div></nav>
         </header><!-- /#banner -->
         <div class="row">
-             <div class="col m3 teal lighten-2" >
+             <div class="col m3 " >
                      <section  class="body">
                          <div class="row">
                                 <div class="col s12 m12">
-                                  <div class="card blue-grey darken-1">
+                                  <div class="card grey darken-1">
                                     <div class="card-content white-text">
                                       <span class="card-title">{{AUTHOR}}</span>
                                       <span>{{AUTHOR_FUNCTION}}</span>
@@ -87,7 +87,7 @@
 
                 </section><!-- /#extras -->
              </div>
-             <div  class="col s12 m9 materialize-red lighten-4">
+             <div  class="col s12 m9 ">
                 {% block content %}
                 {% endblock %}
              </div>
@@ -109,7 +109,7 @@
 
                                  </ul>
                          </div>
-                    <div class="col m6 s12">
+                        <div class="col m6 s12">
                            <ul class="collection">
                                 {% if FEED_ALL_ATOM %}
                                     <li class="collection-item"><a href="{{ FEED_DOMAIN }}/{% if FEED_ALL_ATOM_URL %}{{ FEED_ALL_ATOM_URL }}{% else %}{{ FEED_ALL_ATOM }}{% endif %}" type="application/atom+xml" rel="alternate">Flux atom</a></li>
