FEATURE: change apparence homepage

--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -26,7 +26,7 @@
                <nav>
                     <div class="nav-wrapper">
                         <div class="container">
-                        <a href="{{ SITEURL }}/"  class="brand-logo" >{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
+                        <a href="{{ SITEURL }}/"  class="brand-logo" >{{ SITENAME }}{% if SITESUBTITLE %} <i>{{ SITESUBTITLE }}</i>{% endif %}</a>
 </div>
 
                     <ul>
