--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -27,7 +27,7 @@
                <nav>
                     <div class="nav-wrapper">
                         <div class="container">
-                        <a href="{{ SITEURL }}/"  class="brand-logo" ><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/portfolio.png" alt="{{ SITENAME }}" /></a>
+                        <a href="{{ SITEURL }}/"  class="brand-logo" >{{ SITENAME }}</a>
 </div>
 
                     <ul>
